# Password-Manager-Crypto

./: CMakeLists.txt  PasswordManager.sln  PasswordManager.vcxproj  PasswordManager.vcxproj.filters  README.md
PMClient/: CMakeLists.txt  main.cpp
PMLibrary/: CMakeLists.txt
PMLibrary/include/PMLibrary/: Database.h  Server.h
PMLibrary/src/: Database.cpp  Server.cpp
PMNetworking/: CMakeLists.txt
PMNetworking/include/PMNetworking/: Base.h  Server.h
PMNetworking/src/: Base.cpp  Server.cpp
PMServer/: CMakeLists.txt  main.cpp
